--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../scss/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="shortcut icon" href="../assets/icons/icons8-french-bulldog-64.png" type="image/x-icon">
@@ -33,42 +34,6 @@
 
         </div>
     </main>
-
-    <!-- <main class="mainBuzos">
-        <div class="tituloBuzos">
-            <button class="close-btn">
-                <h2>NUESTROS BUZOS</h2>
-            </button>
-        </div>
-        <div class="contBuzos">
-
-        </div>
-    </main> -->
-
-
-<!--  cart modal  -->
-    <!-- <div class="cart-modal-overlay">
-        <div class="cart-modal">
-            <i id="close-btn" class="fas fa-times"></i>
-            <h1 class="cart-is-empty">El carrito esta vacio</h1>
-        
-            <div class="product-rows">
-            </div>
-            <div class="total">
-                <h1 class="cart-total">TOTAL</h1>
-                <span id="total" class="total-price">$0</span>
-                <button class="purchase-btn">COMPRAR</button>
-            </div>
-        </div>
-    </div> -->
-<!--   end of cart modal -->
-    <!-- <a class="cart-btn">
-        <i id="cart" class="fas fa-shopping-cart"></i>
-        <span class ="cart-quantity">0</span>
-    </a> -->
-
-
-
 
 
 
@@ -116,10 +81,13 @@
             <div class="indicador"></div>
         </ul>
     </nav>
-    <script src="../js/carrito.js"></script>
-    <script src="../js/main2.js"></script>
+
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="../js/carrito.js"></script>
+    <script src="../js/main2.js"></script>
 </body>
 </html>
