--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -26,8 +26,9 @@
                 <h2>NUESTRA ROPA</h2>
             </button>
             <form action="" id="filtro">
-                <input type="radio" name="tipo" id="filtroRemeras"><label for="filtroRemeras" class="labelRemeras">Remeras</label>
-                <input type="radio" name="tipo" id="filtroBuzos"><label for="filtroBuzos" class="labelRemeras">Buzos</label>
+                <input type="radio" name="tipo" id="filtroRemeras" value="remera"><label for="filtroRemeras" class="labelRemeras">Remeras</label>
+                <input type="radio" name="tipo" id="filtroBuzos" value="buzo"><label for="filtroBuzos" class="labelRemeras">Buzos</label>
+                <input type="radio" name="tipo" id="todo" value="todo" checked="true"><label for="todo" class="labelRemeras">Todo</label>
             </form>
         </div>
         <div class="contRem">
