--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="scss/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.css">
+    <link rel="stylesheet" href="scss/style.css">
     <link rel="shortcut icon" href="assets/icons/icons8-french-bulldog-64.png" type="image/x-icon">
     <title>Moncho</title>
 </head>
@@ -24,11 +26,21 @@
     </div>
 
 
-    <p id="demo"></p>
-    <main class="main">
-        <div id="">
-            <h2>Titulo</h2>
+    <main class="mainIndex">
+        <div id="titulo">
+            <h2>Moncho Clothing</h2>
         </div>
+        <div class="contenidoIndex">
+            <p class="descripcion">Somos una marca argentina especializada en buzos y remeras con un estilo unico y diferente.</p>
+        </div>
+        <div class="imagenesIndex">
+            <img src="assets/img/remeras/remera1.jpg" alt="" style="width: 200px;">
+            <img src="assets/img/buzos/buzo1.jpg" alt="" style="width: 200px;">
+            <img src="assets/img/remeras/remera2.jpg" alt="" style="width: 200px;">
+            <img src="assets/img/buzos/buzo2.jpg" alt="" style="width: 200px;">
+            <img src="assets/img/remeras/remera3.jpg" alt="" style="width: 200px;">
+        </div>
+        <a href="pages/remeras.html" class="boton">Ir a comprar</a>
     </main>
 
 
@@ -58,7 +70,7 @@
                 </a>
             </li>
             <li class="list">
-                <a href="#">
+                <a href="pages/contacto.html">
                     <span class="icon">
                         <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
                     </span>
@@ -77,10 +89,11 @@
             <div class="indicador"></div>
         </ul>
     </nav>
-    <script src="js/main.js"></script>
-    <script src="js/carrito.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
+    <script src="js/main2.js"></script>
+    <script src="js/carrito.js"></script>
 </body>
 </html>
