--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -63,7 +63,7 @@
                 </a>
             </li>
             <li class="list">
-                <a href="#">
+                <a href="contacto.html">
                     <span class="icon">
                         <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
                     </span>
